--- a/07_Customer_Churn/07_Customer_Churn.ipynb
+++ b/07_Customer_Churn/07_Customer_Churn.ipynb
@@ -29,9 +29,19 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "toc": true
+   },
+   "source": [
+    "<h1>Содержание<span class=\"tocSkip\"></span></h1>\n",
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Описание-данных\" data-toc-modified-id=\"Описание-данных-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Описание данных</a></span></li><li><span><a href=\"#Импорт-библиотек\" data-toc-modified-id=\"Импорт-библиотек-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Импорт библиотек</a></span></li><li><span><a href=\"#Загрузка-данных\" data-toc-modified-id=\"Загрузка-данных-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Загрузка данных</a></span></li><li><span><a href=\"#Исследование-задачи\" data-toc-modified-id=\"Исследование-задачи-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Исследование задачи</a></span></li><li><span><a href=\"#Исследование-модели-без-учета-дисбаланса-классов\" data-toc-modified-id=\"Исследование-модели-без-учета-дисбаланса-классов-5\"><span class=\"toc-item-num\">5&nbsp;&nbsp;</span>Исследование модели без учета дисбаланса классов</a></span><ul class=\"toc-item\"><li><span><a href=\"#Модель:-случайный-лес\" data-toc-modified-id=\"Модель:-случайный-лес-5.1\"><span class=\"toc-item-num\">5.1&nbsp;&nbsp;</span>Модель: случайный лес</a></span></li></ul></li><li><span><a href=\"#Борьба-с-дисбалансом\" data-toc-modified-id=\"Борьба-с-дисбалансом-6\"><span class=\"toc-item-num\">6&nbsp;&nbsp;</span>Борьба с дисбалансом</a></span><ul class=\"toc-item\"><li><span><a href=\"#Модель:-случайный-лес-с-весами\" data-toc-modified-id=\"Модель:-случайный-лес-с-весами-6.1\"><span class=\"toc-item-num\">6.1&nbsp;&nbsp;</span>Модель: случайный лес с весами</a></span></li><li><span><a href=\"#Модель:-случайный-лес-по-выборке-после-upsampling\" data-toc-modified-id=\"Модель:-случайный-лес-по-выборке-после-upsampling-6.2\"><span class=\"toc-item-num\">6.2&nbsp;&nbsp;</span>Модель: случайный лес по выборке после upsampling</a></span></li><li><span><a href=\"#Модель:-случайный-лес-по-выборке-после-downsampling\" data-toc-modified-id=\"Модель:-случайный-лес-по-выборке-после-downsampling-6.3\"><span class=\"toc-item-num\">6.3&nbsp;&nbsp;</span>Модель: случайный лес по выборке после downsampling</a></span></li></ul></li><li><span><a href=\"#Тестирование-модели\" data-toc-modified-id=\"Тестирование-модели-7\"><span class=\"toc-item-num\">7&nbsp;&nbsp;</span>Тестирование модели</a></span><ul class=\"toc-item\"><li><span><a href=\"#Модель:-случайный-лес\" data-toc-modified-id=\"Модель:-случайный-лес-7.1\"><span class=\"toc-item-num\">7.1&nbsp;&nbsp;</span>Модель: случайный лес</a></span></li><li><span><a href=\"#Модель:-случайный-лес-с-весами\" data-toc-modified-id=\"Модель:-случайный-лес-с-весами-7.2\"><span class=\"toc-item-num\">7.2&nbsp;&nbsp;</span>Модель: случайный лес с весами</a></span></li><li><span><a href=\"#Модель:-случайный-лес-по-выборке-после-upsampling\" data-toc-modified-id=\"Модель:-случайный-лес-по-выборке-после-upsampling-7.3\"><span class=\"toc-item-num\">7.3&nbsp;&nbsp;</span>Модель: случайный лес по выборке после upsampling</a></span></li><li><span><a href=\"#Модель:-случайный-лес-по-выборке-после-downsampling\" data-toc-modified-id=\"Модель:-случайный-лес-по-выборке-после-downsampling-7.4\"><span class=\"toc-item-num\">7.4&nbsp;&nbsp;</span>Модель: случайный лес по выборке после downsampling</a></span></li></ul></li><li><span><a href=\"#Общий-вывод\" data-toc-modified-id=\"Общий-вывод-8\"><span class=\"toc-item-num\">8&nbsp;&nbsp;</span>Общий вывод</a></span></li></ul></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Описание данных\n",
+    "## Описание данных\n",
     "\n",
     "Источник данных: [https://www.kaggle.com/barelydedicated/bank-customer-churn-modeling](https://www.kaggle.com/barelydedicated/bank-customer-churn-modeling)\n",
     "\n",
@@ -74,33 +84,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Содержание\n",
-    "\n",
-    "\n",
-    "    1. Подготовка данных\n",
-    "\n",
-    "    2. Исследование модели без учета дисбаланса классов\n",
-    "\n",
-    "    3. Борьба с дисбалансом\n",
-    "\n",
-    "    4. Тестирование модели\n",
-    "\n",
-    "    5. Общий вывод"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div style=\"border:solid black 1.5px; padding: 20px\">\n",
-    "    \n",
-    "- Импортируем необходимые библиотеки"
+    "## Импорт библиотек"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-05-30T18:09:46.813022Z",
+     "start_time": "2022-05-30T18:09:45.905554Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -123,7 +118,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1. Подготовка данных"
+    "## Загрузка данных"
    ]
   },
   {
@@ -137,8 +132,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-05-30T18:09:51.513542Z",
+     "start_time": "2022-05-30T18:09:51.411308Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -147,20 +147,22 @@
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 10000 entries, 0 to 9999\n",
       "Data columns (total 14 columns):\n",
-      "RowNumber          10000 non-null int64\n",
-      "CustomerId         10000 non-null int64\n",
-      "Surname            10000 non-null object\n",
-      "CreditScore        10000 non-null int64\n",
-      "Geography          10000 non-null object\n",
-      "Gender             10000 non-null object\n",
-      "Age                10000 non-null int64\n",
-      "Tenure             9091 non-null float64\n",
-      "Balance            10000 non-null float64\n",
-      "NumOfProducts      10000 non-null int64\n",
-      "HasCrCard          10000 non-null int64\n",
-      "IsActiveMember     10000 non-null int64\n",
-      "EstimatedSalary    10000 non-null float64\n",
-      "Exited             10000 non-null int64\n",
+      " #   Column           Non-Null Count  Dtype  \n",
+      "---  ------           --------------  -----  \n",
+      " 0   RowNumber        10000 non-null  int64  \n",
+      " 1   CustomerId       10000 non-null  int64  \n",
+      " 2   Surname          10000 non-null  object \n",
+      " 3   CreditScore      10000 non-null  int64  \n",
+      " 4   Geography        10000 non-null  object \n",
+      " 5   Gender           10000 non-null  object \n",
+      " 6   Age              10000 non-null  int64  \n",
+      " 7   Tenure           9091 non-null   float64\n",
+      " 8   Balance          10000 non-null  float64\n",
+      " 9   NumOfProducts    10000 non-null  int64  \n",
+      " 10  HasCrCard        10000 non-null  int64  \n",
+      " 11  IsActiveMember   10000 non-null  int64  \n",
+      " 12  EstimatedSalary  10000 non-null  float64\n",
+      " 13  Exited           10000 non-null  int64  \n",
       "dtypes: float64(3), int64(8), object(3)\n",
       "memory usage: 1.1+ MB\n"
      ]
@@ -204,7 +206,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>0</td>\n",
+       "      <th>0</th>\n",
        "      <td>1</td>\n",
        "      <td>15634602</td>\n",
        "      <td>Hargrave</td>\n",
@@ -221,7 +223,7 @@
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1</td>\n",
+       "      <th>1</th>\n",
        "      <td>2</td>\n",
        "      <td>15647311</td>\n",
        "      <td>Hill</td>\n",
@@ -238,7 +240,7 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2</td>\n",
+       "      <th>2</th>\n",
        "      <td>3</td>\n",
        "      <td>15619304</td>\n",
        "      <td>Onio</td>\n",
@@ -255,7 +257,7 @@
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>3</td>\n",
+       "      <th>3</th>\n",
        "      <td>4</td>\n",
        "      <td>15701354</td>\n",
        "      <td>Boni</td>\n",
@@ -272,7 +274,7 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>4</td>\n",
+       "      <th>4</th>\n",
        "      <td>5</td>\n",
        "      <td>15737888</td>\n",
        "      <td>Mitchell</td>\n",
@@ -289,7 +291,7 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>...</td>\n",
+       "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -306,7 +308,7 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>9995</td>\n",
+       "      <th>9995</th>\n",
        "      <td>9996</td>\n",
        "      <td>15606229</td>\n",
        "      <td>Obijiaku</td>\n",
@@ -323,7 +325,7 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>9996</td>\n",
+       "      <th>9996</th>\n",
        "      <td>9997</td>\n",
        "      <td>15569892</td>\n",
        "      <td>Johnstone</td>\n",
@@ -340,7 +342,7 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>9997</td>\n",
+       "      <th>9997</th>\n",
        "      <td>9998</td>\n",
        "      <td>15584532</td>\n",
        "      <td>Liu</td>\n",
@@ -357,7 +359,7 @@
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>9998</td>\n",
+       "      <th>9998</th>\n",
        "      <td>9999</td>\n",
        "      <td>15682355</td>\n",
        "      <td>Sabbatini</td>\n",
@@ -374,7 +376,7 @@
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>9999</td>\n",
+       "      <th>9999</th>\n",
        "      <td>10000</td>\n",
        "      <td>15628319</td>\n",
        "      <td>Walker</td>\n",
@@ -443,7 +445,7 @@
     }
    ],
    "source": [
-    "churn = pd.read_csv('/datasets/Churn.csv')\n",
+    "churn = pd.read_csv('datasets/Churn.csv')\n",
     "\n",
     "churn.info()\n",
     "\n",
@@ -467,8 +469,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-05-30T18:09:56.326786Z",
+     "start_time": "2022-05-30T18:09:56.305807Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -477,20 +484,22 @@
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 10000 entries, 0 to 9999\n",
       "Data columns (total 14 columns):\n",
-      "RowNumber          10000 non-null int64\n",
-      "CustomerId         10000 non-null int64\n",
-      "Surname            10000 non-null object\n",
-      "CreditScore        10000 non-null int64\n",
-      "Geography          10000 non-null object\n",
-      "Gender             10000 non-null object\n",
-      "Age                10000 non-null int64\n",
-      "Tenure             10000 non-null int64\n",
-      "Balance            10000 non-null float64\n",
-      "NumOfProducts      10000 non-null int64\n",
-      "HasCrCard          10000 non-null int64\n",
-      "IsActiveMember     10000 non-null int64\n",
-      "EstimatedSalary    10000 non-null float64\n",
-      "Exited             10000 non-null int64\n",
+      " #   Column           Non-Null Count  Dtype  \n",
+      "---  ------           --------------  -----  \n",
+      " 0   RowNumber        10000 non-null  int64  \n",
+      " 1   CustomerId       10000 non-null  int64  \n",
+      " 2   Surname          10000 non-null  object \n",
+      " 3   CreditScore      10000 non-null  int64  \n",
+      " 4   Geography        10000 non-null  object \n",
+      " 5   Gender           10000 non-null  object \n",
+      " 6   Age              10000 non-null  int64  \n",
+      " 7   Tenure           10000 non-null  int64  \n",
+      " 8   Balance          10000 non-null  float64\n",
+      " 9   NumOfProducts    10000 non-null  int64  \n",
+      " 10  HasCrCard        10000 non-null  int64  \n",
+      " 11  IsActiveMember   10000 non-null  int64  \n",
+      " 12  EstimatedSalary  10000 non-null  float64\n",
+      " 13  Exited           10000 non-null  int64  \n",
       "dtypes: float64(2), int64(9), object(3)\n",
       "memory usage: 1.1+ MB\n"
      ]
@@ -506,7 +515,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2. Исследование задачи"
+    "## Исследование задачи"
    ]
   },
   {
@@ -1360,7 +1369,7 @@
     "<div style=\"border:solid black 1.5px; padding: 20px\">\n",
     "\n",
     "    \n",
-    "## 2. Исследование модели без учета дисбаланса классов"
+    "## Исследование модели без учета дисбаланса классов"
    ]
   },
   {
@@ -1654,7 +1663,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3. Борьба с дисбалансом"
+    "## Борьба с дисбалансом"
    ]
   },
   {
@@ -2372,7 +2381,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 4. Тестирование модели"
+    "## Тестирование модели"
    ]
   },
   {
@@ -2390,7 +2399,7 @@
    "source": [
     "<div style=\"border:solid black 1.5px; padding: 20px\">\n",
     "    \n",
-    "#### Модель: случайный лес "
+    "### Модель: случайный лес "
    ]
   },
   {
@@ -2426,7 +2435,7 @@
    "source": [
     "<div style=\"border:solid black 1.5px; padding: 20px\">\n",
     "    \n",
-    "#### Модель: случайный лес с весами"
+    "### Модель: случайный лес с весами"
    ]
   },
   {
@@ -2462,7 +2471,7 @@
    "source": [
     "<div style=\"border:solid black 1.5px; padding: 20px\">\n",
     "    \n",
-    "#### Модель: случайный лес по выборке после upsampling"
+    "### Модель: случайный лес по выборке после upsampling"
    ]
   },
   {
@@ -2498,7 +2507,7 @@
    "source": [
     "<div style=\"border:solid black 1.5px; padding: 20px\">\n",
     "    \n",
-    "#### Модель: случайный лес по выборке после downsampling"
+    "### Модель: случайный лес по выборке после downsampling"
    ]
   },
   {
@@ -2707,7 +2716,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 5. Общий вывод"
+    "## Общий вывод"
    ]
   },
   {
@@ -2740,7 +2749,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2754,7 +2763,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.10"
   },
   "toc": {
    "base_numbering": 1,
@@ -2762,12 +2771,17 @@
    "number_sections": true,
    "sideBar": true,
    "skip_h1_title": true,
-   "title_cell": "Table of Contents",
+   "title_cell": "Содержание",
    "title_sidebar": "Contents",
-   "toc_cell": false,
-   "toc_position": {},
+   "toc_cell": true,
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "248.797px"
+   },
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
