--- a/13_Toxic_Tweets/13_Toxic_Tweets.ipynb
+++ b/13_Toxic_Tweets/13_Toxic_Tweets.ipynb
@@ -29,29 +29,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "toc": true
+   },
    "source": [
-    "# Инструкция по выполнению проекта"
+    "<h1>Содержание<span class=\"tocSkip\"></span></h1>\n",
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Описание-данных\" data-toc-modified-id=\"Описание-данных-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Описание данных</a></span></li><li><span><a href=\"#Импорт-модулей\" data-toc-modified-id=\"Импорт-модулей-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Импорт модулей</a></span></li><li><span><a href=\"#Константы\" data-toc-modified-id=\"Константы-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Константы</a></span></li><li><span><a href=\"#Функции\" data-toc-modified-id=\"Функции-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Функции</a></span></li><li><span><a href=\"#Загрузка-данных\" data-toc-modified-id=\"Загрузка-данных-5\"><span class=\"toc-item-num\">5&nbsp;&nbsp;</span>Загрузка данных</a></span></li><li><span><a href=\"#Подготовка-данных\" data-toc-modified-id=\"Подготовка-данных-6\"><span class=\"toc-item-num\">6&nbsp;&nbsp;</span>Подготовка данных</a></span></li><li><span><a href=\"#Обучение\" data-toc-modified-id=\"Обучение-7\"><span class=\"toc-item-num\">7&nbsp;&nbsp;</span>Обучение</a></span></li><li><span><a href=\"#Тестирование\" data-toc-modified-id=\"Тестирование-8\"><span class=\"toc-item-num\">8&nbsp;&nbsp;</span>Тестирование</a></span></li><li><span><a href=\"#Общий-вывод\" data-toc-modified-id=\"Общий-вывод-9\"><span class=\"toc-item-num\">9&nbsp;&nbsp;</span>Общий вывод</a></span></li></ul></div>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Загрузите и подготовьте данные.\n",
-    "\n",
-    "\n",
-    "2. Обучите разные модели.\n",
-    "\n",
-    "\n",
-    "3. Сделайте выводы.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Описание данных"
+    "## Описание данных"
    ]
   },
   {
@@ -67,57 +57,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Содержание"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "    1. Загрузка данных\n",
-    "\n",
-    "    2. Обработка\n",
-    "\n",
-    "    3. Обучение\n",
-    "\n",
-    "    4. Тестирование\n",
-    "    \n",
-    "    5. Общий вывод"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Импорт модулей"
+    "## Импорт модулей"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-06-05T14:03:22.937714Z",
+     "start_time": "2022-06-05T14:03:20.901988Z"
+    },
+    "scrolled": false
+   },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Downloading package wordnet to\n",
-      "[nltk_data]     C:\\Users\\ltvns\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Package wordnet is already up-to-date!\n",
-      "[nltk_data] Downloading package stopwords to\n",
-      "[nltk_data]     C:\\Users\\ltvns\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Package stopwords is already up-to-date!\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'textblob'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [3]\u001b[0m, in \u001b[0;36m<cell line: 10>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtime\u001b[39;00m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mre\u001b[39;00m \n\u001b[0;32m---> 10\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtextblob\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m TextBlob, Word\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpymystem3\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Mystem\n\u001b[1;32m     13\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnltk\u001b[39;00m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'textblob'"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -158,7 +121,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Параметры псевдослучайной генерации"
+    "## Константы"
    ]
   },
   {
@@ -174,7 +137,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Функции"
+    "## Функции"
    ]
   },
   {
@@ -293,16 +256,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1. Загрузка данных"
+    "## Загрузка данных"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-06-05T14:03:14.584765Z",
+     "start_time": "2022-06-05T14:03:13.971497Z"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [2]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m comments \u001b[38;5;241m=\u001b[39m \u001b[43mpd\u001b[49m\u001b[38;5;241m.\u001b[39mread_csv(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdatasets/toxic_comments.csv\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'pd' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "comments = pd.read_csv('toxic_comments.csv')"
+    "comments = pd.read_csv('datasets/toxic_comments.csv')"
    ]
   },
   {
@@ -470,7 +450,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2. Обработка"
+    "## Подготовка данных"
    ]
   },
   {
@@ -1179,7 +1159,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3. Обучение"
+    "## Обучение"
    ]
   },
   {
@@ -1605,7 +1585,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Тестирование"
+    "## Тестирование"
    ]
   },
   {
@@ -1786,7 +1766,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 5. Общий вывод"
+    "## Общий вывод"
    ]
   },
   {
@@ -1829,7 +1809,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1843,7 +1823,25 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.10"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": true,
+   "title_cell": "Содержание",
+   "title_sidebar": "Contents",
+   "toc_cell": true,
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "184.797px"
+   },
+   "toc_section_display": true,
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
