--- a/08_Wells/08_Wells.ipynb
+++ b/08_Wells/08_Wells.ipynb
@@ -32,9 +32,19 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "toc": true
+   },
+   "source": [
+    "<h1>Содержание<span class=\"tocSkip\"></span></h1>\n",
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Условия-задачи\" data-toc-modified-id=\"Условия-задачи-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Условия задачи</a></span></li><li><span><a href=\"#Описание-данных\" data-toc-modified-id=\"Описание-данных-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Описание данных</a></span></li><li><span><a href=\"#Импорт-библиотек\" data-toc-modified-id=\"Импорт-библиотек-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Импорт библиотек</a></span></li><li><span><a href=\"#Загрузка-и-подготовка-данных\" data-toc-modified-id=\"Загрузка-и-подготовка-данных-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Загрузка и подготовка данных</a></span></li><li><span><a href=\"#Обучение-и-проверка-модели\" data-toc-modified-id=\"Обучение-и-проверка-модели-5\"><span class=\"toc-item-num\">5&nbsp;&nbsp;</span>Обучение и проверка модели</a></span></li><li><span><a href=\"#Подготовка-к-расчёту-прибыли\" data-toc-modified-id=\"Подготовка-к-расчёту-прибыли-6\"><span class=\"toc-item-num\">6&nbsp;&nbsp;</span>Подготовка к расчёту прибыли</a></span></li><li><span><a href=\"#Расчёт-прибыли-и-рисков\" data-toc-modified-id=\"Расчёт-прибыли-и-рисков-7\"><span class=\"toc-item-num\">7&nbsp;&nbsp;</span>Расчёт прибыли и рисков</a></span></li><li><span><a href=\"#Общий-вывод\" data-toc-modified-id=\"Общий-вывод-8\"><span class=\"toc-item-num\">8&nbsp;&nbsp;</span>Общий вывод</a></span></li></ul></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Условия задачи:"
+    "## Условия задачи"
    ]
   },
   {
@@ -52,7 +62,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Описание данных"
+    "## Описание данных"
    ]
   },
   {
@@ -73,20 +83,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Содержание\n",
-    "\n",
-    "    1. Загрузка и подготовка данных\n",
-    "    2. Обучение и проверка модели\n",
-    "    3. Подготовка к расчёту прибыли\n",
-    "    4. Расчёт прибыли и рисков \n",
-    "    5. Общий вывод"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 1. Загрузка и подготовка данных"
+    "## Импорт библиотек"
    ]
   },
   {
@@ -106,6 +103,13 @@
     "from sklearn.metrics import mean_squared_error\n",
     "\n",
     "import warnings"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Загрузка и подготовка данных"
    ]
   },
   {
@@ -219,7 +223,7 @@
     }
    ],
    "source": [
-    "region_1 = pd.read_csv('/datasets/geo_data_0.csv')\n",
+    "region_1 = pd.read_csv('datasets/geo_data_0.csv')\n",
     "\n",
     "print()\n",
     "print('----------- Данные по первому региону -----------')\n",
@@ -340,7 +344,7 @@
     }
    ],
    "source": [
-    "region_2 = pd.read_csv('/datasets/geo_data_1.csv')\n",
+    "region_2 = pd.read_csv('datasets/geo_data_1.csv')\n",
     "\n",
     "print()\n",
     "print('----------- Данные по второму региону -----------')\n",
@@ -461,7 +465,7 @@
     }
    ],
    "source": [
-    "region_3 = pd.read_csv('/datasets/geo_data_2.csv')\n",
+    "region_3 = pd.read_csv('datasets/geo_data_2.csv')\n",
     "\n",
     "print()\n",
     "print('----------- Данные по третьему региону -----------')\n",
@@ -651,7 +655,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2. Обучение и проверка модели"
+    "## Обучение и проверка модели"
    ]
   },
   {
@@ -923,7 +927,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3. Подготовка к расчёту прибыли"
+    "## Подготовка к расчёту прибыли"
    ]
   },
   {
@@ -1209,7 +1213,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 4. Расчёт прибыли и рисков "
+    "## Расчёт прибыли и рисков "
    ]
   },
   {
@@ -1464,7 +1468,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 5. Общий вывод"
+    "## Общий вывод"
    ]
   },
   {
@@ -1490,7 +1494,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1504,7 +1508,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.10"
   },
   "toc": {
    "base_numbering": 1,
@@ -1512,12 +1516,17 @@
    "number_sections": true,
    "sideBar": true,
    "skip_h1_title": true,
-   "title_cell": "Table of Contents",
+   "title_cell": "Содержание",
    "title_sidebar": "Contents",
-   "toc_cell": false,
-   "toc_position": {},
+   "toc_cell": true,
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "497.594px"
+   },
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
