--- a/09_Gold_Recovery/09_Gold_Recovery.ipynb
+++ b/09_Gold_Recovery/09_Gold_Recovery.ipynb
@@ -28,9 +28,19 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "toc": true
+   },
+   "source": [
+    "<h1>Содержание<span class=\"tocSkip\"></span></h1>\n",
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Описание-данных\" data-toc-modified-id=\"Описание-данных-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Описание данных</a></span></li><li><span><a href=\"#Импорт-библиотек\" data-toc-modified-id=\"Импорт-библиотек-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Импорт библиотек</a></span></li><li><span><a href=\"#Загрузка-данных\" data-toc-modified-id=\"Загрузка-данных-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Загрузка данных</a></span></li><li><span><a href=\"#Анализ-данных\" data-toc-modified-id=\"Анализ-данных-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Анализ данных</a></span></li><li><span><a href=\"#Обучение-модели\" data-toc-modified-id=\"Обучение-модели-5\"><span class=\"toc-item-num\">5&nbsp;&nbsp;</span>Обучение модели</a></span></li><li><span><a href=\"#Проверка-модели-на-тестовой-выборке\" data-toc-modified-id=\"Проверка-модели-на-тестовой-выборке-6\"><span class=\"toc-item-num\">6&nbsp;&nbsp;</span>Проверка модели на тестовой выборке</a></span></li><li><span><a href=\"#Сравнение-результатов-обучения-с-константной-моделью\" data-toc-modified-id=\"Сравнение-результатов-обучения-с-константной-моделью-7\"><span class=\"toc-item-num\">7&nbsp;&nbsp;</span>Сравнение результатов обучения с константной моделью</a></span></li></ul></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Описание данных\n"
+    "## Описание данных\n"
    ]
   },
   {
@@ -55,7 +65,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1. Подготовка данных"
+    "## Импорт библиотек"
    ]
   },
   {
@@ -90,6 +100,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Загрузка данных"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "- Загрузим датасеты"
    ]
   },
@@ -99,9 +116,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gold_recovery_train = pd.read_csv('/datasets/gold_recovery_train.csv')\n",
-    "gold_recovery_test = pd.read_csv('/datasets/gold_recovery_test.csv')\n",
-    "gold_recovery_full = pd.read_csv('/datasets/gold_recovery_full.csv')"
+    "gold_recovery_train = pd.read_csv('datasets/gold_recovery_train.csv')\n",
+    "gold_recovery_test = pd.read_csv('datasets/gold_recovery_test.csv')\n",
+    "gold_recovery_full = pd.read_csv('datasets/gold_recovery_full.csv')"
    ]
   },
   {
@@ -2089,7 +2106,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2. Анализ данных"
+    "## Анализ данных"
    ]
   },
   {
@@ -2323,7 +2340,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3. Модель"
+    "## Обучение модели"
    ]
   },
   {
@@ -2934,7 +2951,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Проверим решение на тестовой выборке\n",
+    "## Проверка модели на тестовой выборке\n",
     "\n",
     "\n",
     "- В тестовой выборке представлены признаки для предсказания, а настоящие результаты возьмем из исходной выборки"
@@ -3159,7 +3176,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Сравним результаты обучения с константной моделью"
+    "## Сравнение результатов обучения с константной моделью"
    ]
   },
   {
@@ -3353,7 +3370,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -3367,7 +3384,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.10"
   },
   "toc": {
    "base_numbering": 1,
@@ -3375,12 +3392,17 @@
    "number_sections": true,
    "sideBar": true,
    "skip_h1_title": true,
-   "title_cell": "Table of Contents",
+   "title_cell": "Содержание",
    "title_sidebar": "Contents",
-   "toc_cell": false,
-   "toc_position": {},
+   "toc_cell": true,
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "497.594px"
+   },
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
