--- a/11_Autos/11_Autos.ipynb
+++ b/11_Autos/11_Autos.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Описание проекта <a class=\"anchor\" id=\"1-bullet\"></a>"
+    "# Описание проекта <a class=\"anchor\" id=\"1-bullet\"></a>"
    ]
   },
   {
@@ -27,6 +27,16 @@
     "- качество предсказания;\n",
     "- скорость предсказания;\n",
     "- время обучения."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "toc": true
+   },
+   "source": [
+    "<h1>Содержание<span class=\"tocSkip\"></span></h1>\n",
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Описание-данных\" data-toc-modified-id=\"Описание-данных-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Описание данных</a></span></li><li><span><a href=\"#Импорт-модулей\" data-toc-modified-id=\"Импорт-модулей-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Импорт модулей</a></span></li><li><span><a href=\"#Константы\" data-toc-modified-id=\"Константы-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Константы</a></span></li><li><span><a href=\"#Функции\" data-toc-modified-id=\"Функции-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Функции</a></span></li><li><span><a href=\"#Загрузка-и-подготовка-данных\" data-toc-modified-id=\"Загрузка-и-подготовка-данных-5\"><span class=\"toc-item-num\">5&nbsp;&nbsp;</span>Загрузка и подготовка данных</a></span></li><li><span><a href=\"#Обучение-моделей\" data-toc-modified-id=\"Обучение-моделей-6\"><span class=\"toc-item-num\">6&nbsp;&nbsp;</span>Обучение моделей</a></span></li><li><span><a href=\"#Анализ-моделей\" data-toc-modified-id=\"Анализ-моделей-7\"><span class=\"toc-item-num\">7&nbsp;&nbsp;</span>Анализ моделей</a></span></li><li><span><a href=\"#Общий-вывод\" data-toc-modified-id=\"Общий-вывод-8\"><span class=\"toc-item-num\">8&nbsp;&nbsp;</span>Общий вывод</a></span></li></ul></div>"
    ]
   },
   {
@@ -133,7 +143,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Параметры псевдослучайной генерации"
+    "## Константы"
    ]
   },
   {
@@ -326,14 +336,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1. Подготовка данных"
+    "## Загрузка и подготовка данных"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- #### Загрузим датасет"
+    "- Загрузим датасет"
    ]
   },
   {
@@ -342,14 +352,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "autos = pd.read_csv('autos.csv')"
+    "autos = pd.read_csv('datasets/autos.csv')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- #### Рассмотрим данные"
+    "- Рассмотрим данные"
    ]
   },
   {
@@ -670,7 +680,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- #### Удалим признаки, которые явным образом не связаны со стоимостью автомобиля:\n",
+    "- Удалим признаки, которые явным образом не связаны со стоимостью автомобиля:\n",
     "\n",
     "\n",
     "    - DateCrawled — дата скачивания анкеты из базы\n",
@@ -920,7 +930,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- #### Удалим пропуски"
+    "- Удалим пропуски"
    ]
   },
   {
@@ -1156,7 +1166,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- #### Удалим дубликаты"
+    "- Удалим дубликаты"
    ]
   },
   {
@@ -1394,7 +1404,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- #### Оценим распределения количественных признаков"
+    "- Оценим распределения количественных признаков"
    ]
   },
   {
@@ -1422,7 +1432,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- #### Значения цены и мощности не могут быть равными нулю, будем считать эти значения выбросами"
+    "- Значения цены и мощности не могут быть равными нулю, будем считать эти значения выбросами"
    ]
   },
   {
@@ -1679,13 +1689,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- #### Показатели мощности лучших суперкаров едва превышают 1000 л.с., а среднее значение для автомобилей составляет не более 200 максимум 350 л.с., это говорит о том, что показатели мощности, приведенные в таблице, могут быть на порядок завышены"
+    "- Показатели мощности лучших суперкаров едва превышают 1000 л.с., а среднее значение для автомобилей составляет не более 200 максимум 350 л.с., это говорит о том, что показатели мощности, приведенные в таблице, могут быть на порядок завышены"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -1706,7 +1718,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- #### Будем считать все что выше 350 л.с. выбросами "
+    "- Будем считать все что выше 350 л.с. выбросами "
    ]
   },
   {
@@ -1965,14 +1977,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- #### Теперь распределения количественных признаков выглядят адекватно"
+    "- Теперь распределения количественных признаков выглядят адекватно"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- #### Оценим корреляцию между количественными признаками"
+    "- Оценим корреляцию между количественными признаками"
    ]
   },
   {
@@ -2001,15 +2013,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- #### Между признаками для обучения корреляции не наблюдается \n",
-    "- #### Между признаками для обучения и целевым наблюдаются слабые корреляции"
+    "- Между признаками для обучения корреляции не наблюдается \n",
+    "- Между признаками для обучения и целевым наблюдаются слабые корреляции"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- #### Рассмотрим значения качественных признаков"
+    "- Рассмотрим значения качественных признаков"
    ]
   },
   {
@@ -2064,14 +2076,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- #### Значения качественных признаков в редакции не нуждаются"
+    "- Значения качественных признаков в редакции не нуждаются"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- #### Необходимо закодировать качественные признаки\n",
+    "- Необходимо закодировать качественные признаки\n",
     "\n",
     "\n",
     "- Для столбцов VehicleType, Gearbox, FuelType, NotRepaired мы можем применить стандартную кодировку one-hot-encoding (\"one\")"
@@ -2764,7 +2776,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- #### Итоговый порядок подготовки данных:\n",
+    "- Итоговый порядок подготовки данных:\n",
     "\n",
     "\n",
     "    1. Чтение датасета\n",
@@ -3087,7 +3099,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- #### Разделим признаки на целевые (y) и обучающие (X)"
+    "- Разделим признаки на целевые (y) и обучающие (X)"
    ]
   },
   {
@@ -3106,7 +3118,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- #### Разделим датасет на выборки для тестрования и обучения в соотношении 25:75"
+    "- Разделим датасет на выборки для тестрования и обучения в соотношении 25:75"
    ]
   },
   {
@@ -3124,7 +3136,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- #### Проведем масштабирование количественных признаков для обучающей выборки"
+    "- Проведем масштабирование количественных признаков для обучающей выборки"
    ]
   },
   {
@@ -3359,7 +3371,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2. Обучение моделей"
+    "## Обучение моделей"
    ]
   },
   {
@@ -3384,7 +3396,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- #### Построим модели градиентного бустинга"
+    "- Построим модели градиентного бустинга"
    ]
   },
   {
@@ -3535,7 +3547,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- #### Построим модель решающего дерева"
+    "- Построим модель решающего дерева"
    ]
   },
   {
@@ -3717,7 +3729,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- #### Построим модель случайного леса"
+    "- Построим модель случайного леса"
    ]
   },
   {
@@ -3789,7 +3801,9 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -3902,7 +3916,7 @@
     "collapsed": true
    },
    "source": [
-    "- #### Оценим резульаты моделей на этапе подбора оптимальных параметров обучения:"
+    "- Оценим резульаты моделей на этапе подбора оптимальных параметров обучения:"
    ]
   },
   {
@@ -4000,7 +4014,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3. Анализ моделей"
+    "## Анализ моделей"
    ]
   },
   {
@@ -4009,7 +4023,7 @@
     "collapsed": true
    },
    "source": [
-    "- #### Сравним результаты моделей на тестовых данных"
+    "- Сравним результаты моделей на тестовых данных"
    ]
   },
   {
@@ -4512,7 +4526,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- #### Подведем итоги:"
+    "- Подведем итоги:"
    ]
   },
   {
@@ -4683,7 +4697,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- #### Общий вывод"
+    "## Общий вывод"
    ]
   },
   {
@@ -4706,7 +4720,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -4720,7 +4734,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.10"
   },
   "toc": {
    "base_numbering": 1,
@@ -4728,12 +4742,17 @@
    "number_sections": true,
    "sideBar": true,
    "skip_h1_title": true,
-   "title_cell": "Table of Contents",
+   "title_cell": "Содержание",
    "title_sidebar": "Contents",
-   "toc_cell": false,
-   "toc_position": {},
+   "toc_cell": true,
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "185.594px"
+   },
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
