--- a/12_Time_Series/12_Time_Series.ipynb
+++ b/12_Time_Series/12_Time_Series.ipynb
@@ -27,81 +27,33 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "toc": true
+   },
    "source": [
-    "# Инструкция по выполнению проекта"
+    "<h1>Содержание<span class=\"tocSkip\"></span></h1>\n",
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Описание-данных\" data-toc-modified-id=\"Описание-данных-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Описание данных</a></span></li><li><span><a href=\"#Импорт-модулей\" data-toc-modified-id=\"Импорт-модулей-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Импорт модулей</a></span></li><li><span><a href=\"#Константы\" data-toc-modified-id=\"Константы-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Константы</a></span></li><li><span><a href=\"#Функции\" data-toc-modified-id=\"Функции-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Функции</a></span></li><li><span><a href=\"#Загрузка-и-подготовка-данных\" data-toc-modified-id=\"Загрузка-и-подготовка-данных-5\"><span class=\"toc-item-num\">5&nbsp;&nbsp;</span>Загрузка и подготовка данных</a></span></li><li><span><a href=\"#Анализ-данных\" data-toc-modified-id=\"Анализ-данных-6\"><span class=\"toc-item-num\">6&nbsp;&nbsp;</span>Анализ данных</a></span></li><li><span><a href=\"#Обучение-моделей\" data-toc-modified-id=\"Обучение-моделей-7\"><span class=\"toc-item-num\">7&nbsp;&nbsp;</span>Обучение моделей</a></span><ul class=\"toc-item\"><li><span><a href=\"#Подготовка-признаков\" data-toc-modified-id=\"Подготовка-признаков-7.1\"><span class=\"toc-item-num\">7.1&nbsp;&nbsp;</span>Подготовка признаков</a></span></li><li><span><a href=\"#Обучение-модели-линейной-регресии\" data-toc-modified-id=\"Обучение-модели-линейной-регресии-7.2\"><span class=\"toc-item-num\">7.2&nbsp;&nbsp;</span>Обучение модели линейной регресии</a></span></li><li><span><a href=\"#Обучение-модели-случайный-лес\" data-toc-modified-id=\"Обучение-модели-случайный-лес-7.3\"><span class=\"toc-item-num\">7.3&nbsp;&nbsp;</span>Обучение модели случайный лес</a></span></li><li><span><a href=\"#Обучение-модели-градиентного-бустинга\" data-toc-modified-id=\"Обучение-модели-градиентного-бустинга-7.4\"><span class=\"toc-item-num\">7.4&nbsp;&nbsp;</span>Обучение модели градиентного бустинга</a></span></li><li><span><a href=\"#Итоги-обучения-моделей\" data-toc-modified-id=\"Итоги-обучения-моделей-7.5\"><span class=\"toc-item-num\">7.5&nbsp;&nbsp;</span>Итоги обучения моделей</a></span></li></ul></li><li><span><a href=\"#Проверка-моделей-на-тестовый-данных\" data-toc-modified-id=\"Проверка-моделей-на-тестовый-данных-8\"><span class=\"toc-item-num\">8&nbsp;&nbsp;</span>Проверка моделей на тестовый данных</a></span></li></ul></div>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Загрузите данные и выполните их ресемплирование по одному часу.\n",
-    "\n",
-    "\n",
-    "2. Проанализируйте данные.\n",
-    "\n",
-    "\n",
-    "3. Обучите разные модели с различными гиперпараметрами. Сделайте тестовую выборку размером 10% от исходных данных.\n",
-    "\n",
-    "\n",
-    "4. Проверьте данные на тестовой выборке и сделайте выводы."
+    "## Описание данных"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Описание данных"
+    "Количество заказов находится в столбце 'num_orders'"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Данные лежат в файле /datasets/taxi.csv.\n",
-    "\n",
-    "Количество заказов находится в столбце 'num_orders' (от англ. number of orders, «число заказов»)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Содержание"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "1. Загрузка и ресемплирование данных\n",
-    "\n",
-    "\n",
-    "2. Анализ моделей\n",
-    "\n",
-    "\n",
-    "3. Обучение моделей\n",
-    "\n",
-    "    3.1 Подготовка признаков\n",
-    "    \n",
-    "    3.2 Обучение модели линейной регресии\n",
-    "    \n",
-    "    3.3 Обучение модели случайный лес \n",
-    "    \n",
-    "    3.4 Обучение модели градиентного бустинга\n",
-    "    \n",
-    "    3.5 Итоги обучения моделей\n",
-    "\n",
-    "\n",
-    "4. Проверка моделей на тестовый данных"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Импорт модулей"
+    "## Импорт модулей"
    ]
   },
   {
@@ -135,7 +87,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Параметры псевдослучайной генерации"
+    "##  Константы"
    ]
   },
   {
@@ -151,7 +103,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Функции"
+    "## Функции"
    ]
   },
   {
@@ -271,7 +223,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1. Загрузка и ресемплирование данных"
+    "## Загрузка и подготовка данных"
    ]
   },
   {
@@ -280,7 +232,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "taxi_raw = pd.read_csv('taxi.csv', parse_dates=[0], index_col=[0])"
+    "taxi_raw = pd.read_csv('datasets/taxi.csv', parse_dates=[0], index_col=[0])"
    ]
   },
   {
@@ -540,7 +492,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2. Анализ данных"
+    "## Анализ данных"
    ]
   },
   {
@@ -862,14 +814,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3. Обучение моделей"
+    "## Обучение моделей"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3.1 Подготовка признаков"
+    "### Подготовка признаков"
    ]
   },
   {
@@ -1644,7 +1596,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3.2 Обучение модели линейной регресии"
+    "### Обучение модели линейной регресии"
    ]
   },
   {
@@ -1842,7 +1794,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3.3 Обучение модели случайный лес"
+    "### Обучение модели случайный лес"
    ]
   },
   {
@@ -2025,7 +1977,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3.4 Обучение модели градиентного бустинга"
+    "### Обучение модели градиентного бустинга"
    ]
   },
   {
@@ -2205,7 +2157,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3.5 Итоги обучения моделей"
+    "### Итоги обучения моделей"
    ]
   },
   {
@@ -2277,7 +2229,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 4. Проверка моделей на тестовый данных"
+    "## Проверка моделей на тестовый данных"
    ]
   },
   {
@@ -2566,7 +2518,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2580,7 +2532,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.10"
   },
   "toc": {
    "base_numbering": 1,
@@ -2588,12 +2540,17 @@
    "number_sections": true,
    "sideBar": true,
    "skip_h1_title": true,
-   "title_cell": "Table of Contents",
+   "title_cell": "Содержание",
    "title_sidebar": "Contents",
-   "toc_cell": false,
-   "toc_position": {},
+   "toc_cell": true,
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "181.797px"
+   },
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
