--- a/15_Image_Age/15_Image_Age_Analysis.ipynb
+++ b/15_Image_Age/15_Image_Age_Analysis.ipynb
@@ -30,9 +30,19 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "toc": true
+   },
+   "source": [
+    "<h1>Содержание<span class=\"tocSkip\"></span></h1>\n",
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Задача\" data-toc-modified-id=\"Задача-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Задача</a></span></li><li><span><a href=\"#Описание-данных\" data-toc-modified-id=\"Описание-данных-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Описание данных</a></span></li><li><span><a href=\"#Импорт-модулей\" data-toc-modified-id=\"Импорт-модулей-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Импорт модулей</a></span></li><li><span><a href=\"#Загрузка-и-анализ-данных\" data-toc-modified-id=\"Загрузка-и-анализ-данных-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Загрузка и анализ данных</a></span></li><li><span><a href=\"#Обучение-модели\" data-toc-modified-id=\"Обучение-модели-5\"><span class=\"toc-item-num\">5&nbsp;&nbsp;</span>Обучение модели</a></span></li><li><span><a href=\"#Анализ-обученной-модели\" data-toc-modified-id=\"Анализ-обученной-модели-6\"><span class=\"toc-item-num\">6&nbsp;&nbsp;</span>Анализ обученной модели</a></span></li><li><span><a href=\"#Общий-вывод\" data-toc-modified-id=\"Общий-вывод-7\"><span class=\"toc-item-num\">7&nbsp;&nbsp;</span>Общий вывод</a></span></li></ul></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Задача"
+    "## Задача"
    ]
   },
   {
@@ -49,27 +59,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Инструкция по выполнению проекта"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "1. Проведите исследовательский анализ набора фотографий.\n",
-    "\n",
-    "\n",
-    "2. Подготовьте данные к обучению.\n",
-    "\n",
-    "\n",
-    "3. Обучите нейронную сеть и рассчитайте её качество."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Описание данных"
+    "## Описание данных"
    ]
   },
   {
@@ -84,7 +74,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Импорт модулей"
+    "## Импорт модулей"
    ]
   },
   {
@@ -105,7 +95,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Исследовательский анализ данных"
+    "## Загрузка и анализ данных"
    ]
   },
   {
@@ -441,7 +431,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Обучение модели"
+    "## Обучение модели"
    ]
   },
   {
@@ -759,7 +749,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Анализ обученной модели"
+    "## Анализ обученной модели"
    ]
   },
   {
@@ -1324,7 +1314,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Общий вывод"
+    "## Общий вывод"
    ]
   },
   {
@@ -1342,7 +1332,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1356,7 +1346,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.10"
   },
   "toc": {
    "base_numbering": 1,
@@ -1366,13 +1356,18 @@
    },
    "number_sections": true,
    "sideBar": true,
-   "skip_h1_title": false,
-   "title_cell": "Table of Contents",
+   "skip_h1_title": true,
+   "title_cell": "Содержание",
    "title_sidebar": "Contents",
-   "toc_cell": false,
-   "toc_position": {},
+   "toc_cell": true,
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "369.594px"
+   },
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
